# docs/swagger.yaml
@@ -74,6 +74,12 @@ definitions:
           关联的文件资源ID
         example: 123e4567-e89b-12d3-a456-426614174001
         type: string
+      fileName:
+        description: |-
+          fileName string 文件名
+          关联的文件资源ID
+        example: 240628AI模型数据200组 含FRP性能-(对外）FD
+        type: string
       steps:
         description: |-
           Steps []ExperimentStepData 实验步骤
@@ -81,6 +87,15 @@ definitions:
         items:
           $ref: '#/definitions/data.ExperimentStepData'
         type: array
+    type: object
+  data.ExperimentDeleteRequest:
+    properties:
+      experimentId:
+        description: |-
+          experimentId 实验编号，必填，UUID格式
+          唯一标识要删除的实验，格式必须为UUID4
+        example: 123e4567-e89b-12d3-a456-426614174000
+        type: string
     type: object
   data.ExperimentListRequest:
     properties:
@@ -165,6 +180,28 @@ definitions:
         example: 实验步骤描述
         type: string
     type: object
+  data.ExperimentUpdateRequest:
+    properties:
+      experimentId:
+        description: |-
+          ExperimentID string 实验ID
+          唯一标识实验的 UUID，必填，用于确定要更新的实验记录
+          示例值: "123e4567-e89b-12d3-a456-426614174000"
+        example: 123e4567-e89b-12d3-a456-426614174000
+        type: string
+      experimentName:
+        description: |-
+          ExperimentName string 实验名称
+          实验的名称，选填；如果填写，名称长度限制为 2-128 字符
+          支持中文、英文、数字及特殊字符
+          示例值: "实验名称"
+        example: 实验名称
+        maxLength: 128
+        minLength: 2
+        type: string
+    required:
+    - experimentId
+    type: object
   data.MaterialData:
     properties:
       materialId:
@@ -213,6 +250,124 @@ definitions:
           材料组在实验步骤中的占比，百分比形式
         example: 25.5
         type: number
+    type: object
+  data.PredictionData:
+    properties:
+      accuracy:
+        description: |-
+          Accuracy float64 准确率
+          实验结果预测的准确率 0~100
+        example: 25.5
+        type: number
+      fileName:
+        description: |-
+          fileName string 文件名称
+          实验结果预测的数据来源
+        example: 来源文件名称
+        type: string
+      resultValue:
+        description: |-
+          ResultValue string 实验条件
+          步骤对应的实验结果
+        example: 步骤结果值
+        type: string
+      stepName:
+        description: |-
+          StepName string 步骤名称
+          描述实验步骤的名称
+        example: 步骤名称
+        type: string
+    type: object
+  data.PredictionDemoRequest:
+    properties:
+      experimentCondition:
+        description: |-
+          ExperimentCondition string 实验条件
+          步骤对应的实验条件描述
+        example: 实验条件
+        type: string
+      materialGroups:
+        description: |-
+          MaterialGroups []MaterialGroupData 材料组
+          该步骤中涉及的材料组信息
+        items:
+          $ref: '#/definitions/data.MaterialGroupData'
+        type: array
+      stepName:
+        description: |-
+          StepName string 步骤名称
+          描述实验步骤的名称
+        example: 步骤名称
+        type: string
+    type: object
+  data.PredictionDemoResponse:
+    properties:
+      accuracy:
+        description: |-
+          Accuracy float64 准确率
+          实验结果预测的准确率 0~100
+        example: 25.5
+        type: number
+      fileName:
+        description: |-
+          fileName string 文件名称
+          实验结果预测的数据来源
+        example: 来源文件名称
+        type: string
+      resultValue:
+        description: |-
+          ResultValue string 实验条件
+          步骤对应的实验结果
+        example: 步骤结果值
+        type: string
+      stepName:
+        description: |-
+          StepName string 步骤名称
+          描述实验步骤的名称
+        example: 步骤名称
+        type: string
+    type: object
+  data.PredictionRequest:
+    properties:
+      steps:
+        description: |-
+          Steps []PredictionStepData 实验步骤
+          包含该实验的步骤信息
+        items:
+          $ref: '#/definitions/data.PredictionStepData'
+        type: array
+    type: object
+  data.PredictionResponse:
+    properties:
+      list:
+        description: |-
+          List []PredictionData 数据
+          返回的实验记录结果
+        items:
+          $ref: '#/definitions/data.PredictionData'
+        type: array
+    type: object
+  data.PredictionStepData:
+    properties:
+      experimentCondition:
+        description: |-
+          ExperimentCondition string 实验条件
+          步骤对应的实验条件描述
+        example: 实验条件
+        type: string
+      materialGroups:
+        description: |-
+          MaterialGroups []MaterialGroupData 材料组
+          该步骤中涉及的材料组信息
+        items:
+          $ref: '#/definitions/data.MaterialGroupData'
+        type: array
+      stepName:
+        description: |-
+          StepName string 步骤名称
+          描述实验步骤的名称
+        example: 步骤名称
+        type: string
     type: object
   dto.Empty:
     type: object
@@ -263,6 +418,35 @@ paths:
       tags:
       - 用户认证
   /data/sample:
+    delete:
+      consumes:
+      - application/json
+      description: 根据实验ID删除实验
+      parameters:
+      - description: 请求参数，包含要删除的实验ID
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/data.ExperimentDeleteRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功删除实验
+          schema:
+            $ref: '#/definitions/dto.Empty'
+        "400":
+          description: 请求参数错误，如实验ID不存在或格式无效
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: 服务器内部错误，可能是数据库删除失败等情况
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: 删除实验
+      tags:
+      - 实验管理
     get:
       consumes:
       - application/json
@@ -290,6 +474,35 @@ paths:
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
       summary: 获取实验列表
+      tags:
+      - 实验管理
+    put:
+      consumes:
+      - application/json
+      description: 根据实验ID修改实验的具体信息
+      parameters:
+      - description: 请求参数，包含实验ID及要修改的具体内容
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/data.ExperimentUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功修改实验信息
+          schema:
+            $ref: '#/definitions/dto.Empty'
+        "400":
+          description: 请求参数错误，如实验ID不存在或修改内容无效
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: 服务器内部错误，可能是数据库更新失败等情况
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: 修改实验信息
       tags:
       - 实验管理
   /data/sample/import:
@@ -351,4 +564,64 @@ paths:
       summary: 用户登录
       tags:
       - 用户认证
+  /v1/inference/prediction:
+    post:
+      consumes:
+      - application/json
+      description: 通过提供的配方信息，预测并推荐适合的材料
+      parameters:
+      - description: 配方推荐请求参数
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/data.PredictionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 推荐成功，返回推荐的材料列表
+          schema:
+            $ref: '#/definitions/data.PredictionResponse'
+        "400":
+          description: 请求参数错误，可能是配方信息不完整或格式不正确
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: 服务器内部错误，可能是预测服务异常
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: 根据配方推荐材料
+      tags:
+      - 模型预测
+  /v1/inference/prediction/demo:
+    post:
+      consumes:
+      - application/json
+      description: 演示版本的配方推荐功能，提供简单的预测功能
+      parameters:
+      - description: 配方推荐演示请求参数
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/data.PredictionDemoRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 演示推荐成功，返回推荐的材料示例
+          schema:
+            $ref: '#/definitions/data.PredictionDemoResponse'
+        "400":
+          description: 请求参数错误，可能是配方信息不完整或格式不正确
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: 服务器内部错误，可能是演示服务异常
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: 根据配方推荐材料（Demo）
+      tags:
+      - 模型预测
 swagger: "2.0"
