# internal/api/data/sample.go
@@ -38,6 +38,12 @@ func (api *SampleApi) Import(ctx *gin.Context, req *dto.Empty) (res *dto.Empty, 
 		return nil, utils.NewBusinessError(utils.FileParsingFailedCode)
 	}
 
+	// 文件不能超出10m
+	if file.Size > 10*1024*1024 {
+		logger.Logger.Warnf("File size exceeds 10 MB: %d bytes", file.Size)
+		return nil, utils.NewBusinessError(utils.FileTooLargeCode)
+	}
+
 	res, err = api.service.Import(ctx, file)
 	if err != nil {
 		logger.Logger.Errorf("[Import] Import Error: %v", err)
@@ -67,10 +73,34 @@ func (api *SampleApi) List(ctx *gin.Context, req *data.ExperimentListRequest) (r
 	return
 }
 
-func (api *SampleApi) Edit(ctx *gin.Context, req *dto.Empty) (res *dto.Empty, err error) {
+// Delete 删除实验
+// @Summary 删除实验
+// @Description 根据实验ID删除实验
+// @Tags 实验管理
+// @Accept json
+// @Produce json
+// @Param req body data.ExperimentDeleteRequest true "请求参数，包含要删除的实验ID"
+// @Success 200 {object} dto.Empty "成功删除实验"
+// @Failure 400 {object} dto.ErrorResponse "请求参数错误，如实验ID不存在或格式无效"
+// @Failure 500 {object} dto.ErrorResponse "服务器内部错误，可能是数据库删除失败等情况"
+// @Router /data/sample [delete]
+func (api *SampleApi) Delete(ctx *gin.Context, req *data.ExperimentDeleteRequest) (res *dto.Empty, err error) {
+	res, err = api.service.Delete(ctx, req)
 	return
 }
 
-func (api *SampleApi) Delete(ctx *gin.Context, req *dto.Empty) (res *dto.Empty, err error) {
+// Edit 修改实验信息
+// @Summary 修改实验信息
+// @Description 根据实验ID修改实验的具体信息
+// @Tags 实验管理
+// @Accept json
+// @Produce json
+// @Param req body data.ExperimentUpdateRequest true "请求参数，包含实验ID及要修改的具体内容"
+// @Success 200 {object} dto.Empty "成功修改实验信息"
+// @Failure 400 {object} dto.ErrorResponse "请求参数错误，如实验ID不存在或修改内容无效"
+// @Failure 500 {object} dto.ErrorResponse "服务器内部错误，可能是数据库更新失败等情况"
+// @Router /data/sample [put]
+func (api *SampleApi) Edit(ctx *gin.Context, req *data.ExperimentUpdateRequest) (res *dto.Empty, err error) {
+	res, err = api.service.Edit(ctx, req)
 	return
 }
